...
            .padding(.top, 5)
            .navigationBarTitle("Spell Detail")
            .navigationBarItems(trailing:
                Button(viewModel.favoriteButtonText) {
                    viewModel.toggleFavorite()
                }.foregroundColor(.orange)
                    .accessibility(identifier: "FavoritesButton")
            ).task {
                await viewModel.onAppear()
            }
    }

    @ViewBuilder private var content: some View {
...
